menu: layout overflow fix
+ renamed Daemon to Core

--- a/src/app/core-ui/main/main-view.component.scss
+++ b/src/app/core-ui/main/main-view.component.scss
@@ -140,20 +140,32 @@ a.sidebar-item-link {
   width: $sidebar-width;
   background-color: $bg-black;
   color: white;
+  display: flex;
+  flex-direction: column;
 
   .logo {
+    flex: 0 0 60px;
     display: block;
     height: 60px;
     width: 144px;
     margin: 30px auto;
   }
 
+  .menu-links {
+    flex: 1 1 100%;
+    overflow-y: auto;
+    &::-webkit-scrollbar-thumb {
+      background: lighten($bg-black, 20%);
+      border-radius: 4px;
+    }
+    &::-webkit-scrollbar-track {
+      background: $bg-black;
+    }
+  }
+
   // widgets stuck to the bottom (sidebar's footer)
   .pin-to-bottom {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    flex: 1 1 100px;
 
     // Versions
     .client-version {
